@@ -57,9 +57,8 @@
 typedef struct _VipsForeignLoadMagick {
 	VipsForeignLoad parent_object;
 
-	/* Filename for load.
-	 */
 	char *filename; 
+	gboolean all_frames;
 
 } VipsForeignLoadMagick;
 
@@ -74,7 +73,7 @@ ismagick( const char *filename )
 	VipsImage *t;
 
 	t = vips_image_new();
-	if( vips__magick_read_header( filename, t ) ) {
+	if( vips__magick_read_header( filename, t, FALSE ) ) {
 		g_object_unref( t );
 		return( FALSE );
 	}
@@ -111,7 +110,8 @@ vips_foreign_load_magick_header( VipsForeignLoad *load )
 {
 	VipsForeignLoadMagick *magick = (VipsForeignLoadMagick *) load;
 
-	if( vips__magick_read( magick->filename, load->out ) ) 
+	if( vips__magick_read( magick->filename, 
+		load->out, magick->all_frames ) ) 
 		return( -1 );
 
 	return( 0 );
@@ -149,6 +149,13 @@ vips_foreign_load_magick_class_init( VipsForeignLoadMagickClass *class )
 		VIPS_ARGUMENT_REQUIRED_INPUT, 
 		G_STRUCT_OFFSET( VipsForeignLoadMagick, filename ),
 		NULL );
+
+	VIPS_ARG_BOOL( class, "all_frames", 3, 
+		_( "all_frames" ), 
+		_( "Read all frames from an image" ),
+		VIPS_ARGUMENT_OPTIONAL_INPUT,
+		G_STRUCT_OFFSET( VipsForeignLoadMagick, all_frames ),
+		FALSE );
 }
 
 static void
